--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,5 @@ members = [
     "day13",
     "day14",
     "day15",
+    "day16",
 ]
-
-# [package]
-# name = "advent-of-code-2022"
-# version = "0.1.0"
-# edition = "2021"
-
-# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-# [dependencies]
-# serde_json = "1"
-# anyhow = "1"
-# itertools = "0.10"
-# ndarray = "0.15"
-# num = "0.4"
