--- a/day16/Cargo.toml
+++ b/day16/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "aoc-utils"
+name = "day16"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
 ndarray = "0.15"
+aoc-utils = { path = "../aoc-utils" }
+itertools = "0.10"
